@@ -4,22 +4,19 @@ import com.ecaservice.core.lock.annotation.Locked;
 import com.ecaservice.server.bpm.model.ExperimentRequestModel;
 import com.ecaservice.server.bpm.service.ProcessManager;
 import com.ecaservice.server.config.ProcessConfig;
-import com.ecaservice.server.model.entity.Experiment;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.camunda.bpm.engine.RuntimeService;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.Map;
-import java.util.UUID;
 
 import static com.ecaservice.common.web.util.LogHelper.EV_REQUEST_ID;
 import static com.ecaservice.common.web.util.LogHelper.TX_ID;
 import static com.ecaservice.common.web.util.LogHelper.putMdc;
-import static com.ecaservice.server.bpm.CamundaVariables.APP_INSTANCES_UUID;
 import static com.ecaservice.server.bpm.CamundaVariables.EVALUATION_REQUEST_DATA;
 import static com.ecaservice.server.bpm.CamundaVariables.EXPERIMENT_ID;
+import static com.ecaservice.server.config.LockRegistryKeys.EXPERIMENT_LOCK_REGISTRY_KEY;
 
 /**
  * Experiment process manager.
@@ -31,39 +28,29 @@ import static com.ecaservice.server.bpm.CamundaVariables.EXPERIMENT_ID;
 @RequiredArgsConstructor
 public class ExperimentProcessManager {
 
-    private final String appInstanceUuid = UUID.randomUUID().toString();
-
     private final ExperimentDataService experimentDataService;
     private final ProcessManager processManager;
     private final ProcessConfig processConfig;
-    private final RuntimeService runtimeService;
 
     /**
      * Processes experiment.
      *
      * @param id - experiment id
      */
-    @Locked(lockName = "experiment", key = "#id")
+    @Locked(lockRegistryKey = EXPERIMENT_LOCK_REGISTRY_KEY, lockName = "experiment", key = "#id", waitForLock = false)
     public void processExperiment(Long id) {
         var experiment = experimentDataService.getById(id);
-        if (hasActiveProcess(experiment)) {
+        if (processManager.hasActiveProcess(experiment.getRequestId())) {
             log.warn("Experiment [{}] has active process. Skipped experiment processing...",
                     experiment.getRequestId());
         } else {
-            long activeExperimentProcessesForAppInstance = getActiveExperimentProcessesForAppInstance();
-            if (activeExperimentProcessesForAppInstance >= processConfig.getMaxConcurrentExperimentProcesses()) {
-                log.warn("Got maximum [{}] active experiment processes. Skipped experiment [{}] processing...",
-                        activeExperimentProcessesForAppInstance, experiment.getRequestId());
-            } else {
-                putMdc(TX_ID, experiment.getRequestId());
-                putMdc(EV_REQUEST_ID, experiment.getRequestId());
-                log.info("Starting experiment [{}] business process. Experiment request status [{}], channel [{}]",
-                        experiment.getRequestId(), experiment.getRequestStatus(), experiment.getChannel());
-                Map<String, Object> variables =
-                        Map.of(EXPERIMENT_ID, experiment.getId(), APP_INSTANCES_UUID, appInstanceUuid);
-                processManager.startProcess(processConfig.getProcessExperimentId(), experiment.getRequestId(),
-                        variables);
-            }
+            putMdc(TX_ID, experiment.getRequestId());
+            putMdc(EV_REQUEST_ID, experiment.getRequestId());
+            log.info("Starting experiment [{}] business process. Experiment request status [{}], channel [{}]",
+                    experiment.getRequestId(), experiment.getRequestStatus(), experiment.getChannel());
+            Map<String, Object> variables = Collections.singletonMap(EXPERIMENT_ID, experiment.getId());
+            processManager.startProcess(processConfig.getProcessExperimentId(), experiment.getRequestId(),
+                    variables);
         }
     }
 
@@ -82,21 +69,5 @@ public class ExperimentProcessManager {
                 experimentRequestModel.getRequestId(), variables);
         log.info("Create experiment [{}] request business process has been finished",
                 experimentRequestModel.getRequestId());
-    }
-
-    private boolean hasActiveProcess(Experiment experiment) {
-        var activeProcessInstancesCount = runtimeService.createProcessInstanceQuery()
-                .processInstanceBusinessKey(experiment.getRequestId())
-                .active()
-                .count();
-        return activeProcessInstancesCount > 0L;
-    }
-
-    private long getActiveExperimentProcessesForAppInstance() {
-        return runtimeService.createProcessInstanceQuery()
-                .processDefinitionKey(processConfig.getProcessExperimentId())
-                .variableValueEquals(APP_INSTANCES_UUID, appInstanceUuid)
-                .active()
-                .count();
     }
 }
